<?xml version="1.0"?>
<package format="2">
  <name>tl_tvm</name>
  <version>0.0.0</version>
  <description>The tl_tvm package</description>

  <maintainer email="kosuke.tnp@gmail.com">kosuke</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>



  <export>
    <nodelet plugin="${prefix}/tl_tvm.xml" />
  </export>

</package>
